[project]
name = "keycloaknanny"
version = "23.0.0"
description = 'Simple Python library for managing a toy Keycloak instance.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["keycloak"]
authors = [
  { name = "Stefaan Lippens", email = "soxofaan@gmail.com" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "requests>2.28.0",
]

[project.urls]
Documentation = "https://github.com/soxofaan/keycloak-nanny#readme"
Issues = "https://github.com/soxofaan/keycloak-nanny/issues"
Source = "https://github.com/soxofaan/keycloak-nanny"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["keycloaknanny.py"]


[tool.black]
line-length = 120
